; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_shader_parse.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shaderparser.c_gl_shader_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_parser = type { i32 }

@LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Shader parser errors/warnings:\0A%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gl_shader_parse(%struct.gl_shader_parser* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.gl_shader_parser*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.gl_shader_parser* %0, %struct.gl_shader_parser** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %4, align 8
  %10 = getelementptr inbounds %struct.gl_shader_parser, %struct.gl_shader_parser* %9, i32 0, i32 0
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @shader_parse(i32* %10, i8* %11, i8* %12)
  store i32 %13, i32* %7, align 4
  %14 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %4, align 8
  %15 = getelementptr inbounds %struct.gl_shader_parser, %struct.gl_shader_parser* %14, i32 0, i32 0
  %16 = call i8* @shader_parser_geterrors(i32* %15)
  store i8* %16, i8** %8, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %3
  %20 = load i32, i32* @LOG_WARNING, align 4
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @blog(i32 %20, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %21)
  %23 = load i8*, i8** %8, align 8
  %24 = call i32 @bfree(i8* %23)
  br label %25

25:                                               ; preds = %19, %3
  %26 = load i32, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %25
  %29 = load %struct.gl_shader_parser*, %struct.gl_shader_parser** %4, align 8
  %30 = call i32 @gl_shader_buildstring(%struct.gl_shader_parser* %29)
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @shader_parse(i32*, i8*, i8*) #1

declare dso_local i8* @shader_parser_geterrors(i32*) #1

declare dso_local i32 @blog(i32, i8*, i8*) #1

declare dso_local i32 @bfree(i8*) #1

declare dso_local i32 @gl_shader_buildstring(%struct.gl_shader_parser*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
